--- a/package.json
+++ b/package.json
@@ -3,7 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Abhishek Deb <vikz91.deb@gmail.com>",
-  "license": "MIT",
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev": "DEBUG=App*npx tsx --watch src/index.ts",
+    "build": "tsc && tsc-alias",
+    "start": "node dist/src/index.js",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -14,10 +25,20 @@
     "morgan": "^1.10.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
+    "@tsconfig/node22": "^22.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "eslint": "^9.33.0",
+    "eslint-plugin-perfectionist": "^4.15.0",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
+    "prettier": "^3.6.2",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.0"
   }
 }
