--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "body-parser": "^2.2.0",
@@ -34,11 +35,17 @@
     "eslint": "^9.33.0",
     "eslint-plugin-perfectionist": "^4.15.0",
     "globals": "^16.3.0",
+    "husky": ">=7",
     "jiti": "^2.5.1",
+    "lint-staged": ">=10",
     "prettier": "^3.6.2",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.{ts,css,md}": "prettier --write"
   }
 }
