--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
   },
   "lint-staged": {
     "*.ts": "eslint --cache --fix",
-    "*.{ts,css,md}": "prettier --write"
+    "*.{ts,css,md,json,yml,yaml}": "prettier --write"
   }
 }
