--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "typescript-eslint": "^8.39.0"
   },
   "lint-staged": {
-    "*.ts": "eslint --cache --fix",
-    "*.{ts,css,md,json,yml,yaml}": "prettier --write"
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --max-warnings 0 ."
+    ]
   }
 }
